# geo-3d

./: .gitignore  Cargo.toml  README.md  _config.yml  index.css  index.md  typos.toml
.github/workflows/: test.yml
_includes/: head.html
assets/images/favicon/: site.webmanifest
geo/: CHANGES.md  Cargo.toml
geo-bool-ops-benches/: Cargo.toml
geo-bool-ops-benches/src/: tests.rs
geo-test-fixtures/: Cargo.toml  pp_points.py
geo-test-fixtures/src/: lib.rs
geo-traits/: Cargo.toml
geo-traits/src/: coord.rs  dimension.rs  geometry.rs  geometry_collection.rs  iterator.rs  line.rs  line_string.rs  multi_line_string.rs  multi_point.rs  multi_polygon.rs  point.rs  polygon.rs  rect.rs  to_geo.rs  triangle.rs
geo-types/: CHANGES.md  Cargo.toml
geo-types/src/: arbitrary.rs  debug.rs  error.rs  lib.rs  macros.rs  private_utils.rs  wkt_macro.rs
geo-types/src/geometry/: coord.rs  geometry_collection.rs  line.rs  line_string.rs  mod.rs  multi_line_string.rs  multi_point.rs  multi_polygon.rs  point.rs  polygon.rs  rect.rs  triangle.rs
geo/benches/: area.rs  concave_hull.rs  contains.rs  convex_hull.rs  coordinate_position.rs  euclidean_distance.rs  extremes.rs  frechet_distance.rs  intersection.rs  monotone_subdiv.rs  prepared_geometry.rs  rand_line_crossings.rs  relate.rs  rotate.rs  simplify.rs  simplifyvw.rs  stitch.rs  triangulate.rs  vincenty_distance.rs  winding_order.rs
geo/benches/utils/: crossings.rs  random.rs
geo/examples/: algorithm.rs  concavehull-usage.rs  types.rs
geo/fuzz/: Cargo.toml
geo/fuzz/fuzz_targets/: contains.rs  simplify.rs
geo/src/: lib.rs  types.rs  utils.rs
geo/src/algorithm/: affine_ops.rs  area.rs  bounding_rect.rs  centroid.rs  chaikin_smoothing.rs  chamberlain_duquette_area.rs  closest_point.rs  concave_hull.rs  convert.rs  convert_angle_unit.rs  coordinate_position.rs  coords_iter.rs  cross_track_distance.rs  densify_haversine.rs  dimensions.rs  euclidean_distance.rs  euclidean_length.rs  extremes.rs  frechet_distance.rs  geodesic_area.rs  hausdorff_distance.rs  haversine_bearing.rs  haversine_destination.rs  haversine_distance.rs  haversine_intermediate.rs  haversine_length.rs  interior_point.rs  is_convex.rs  k_nearest_concave_hull.rs  line_interpolate_point.rs  line_intersection.rs  line_locate_point.rs  lines_iter.rs  linestring_segment.rs  map_coords.rs  minimum_rotated_rect.rs  mod.rs  orient.rs  outlier_detection.rs  plane_project.rs  (+18 more)
geo/src/algorithm/bool_ops/: mod.rs  tests.rs
geo/src/algorithm/contains/: geometry.rs  geometry_collection.rs  line.rs  line_string.rs  mod.rs  point.rs  polygon.rs  rect.rs  triangle.rs
geo/src/algorithm/convex_hull/: graham.rs  mod.rs  qhull.rs  test.rs
geo/src/algorithm/intersects/: line.rs  mod.rs  polygon.rs  rect.rs  triangle.rs
geo/src/algorithm/kernels/: mod.rs  robust.rs  simple.rs
geo/src/algorithm/line_measures/: bearing.rs  densify.rs  destination.rs  distance.rs  euclidean_interpolate.rs  interpolate_point.rs  length.rs  mod.rs
geo/src/algorithm/line_measures/metric_spaces/: haversine.rs  mod.rs
geo/src/algorithm/line_measures/metric_spaces/euclidean/: distance.rs  mod.rs
geo/src/algorithm/monotone/: builder.rs  mod.rs  mono_poly.rs  sweep.rs  tests.rs
geo/src/algorithm/relate/: edge_end_builder.rs  mod.rs  relate_operation.rs
geo/src/algorithm/relate/geomgraph/: edge.rs  edge_end.rs  edge_end_bundle.rs  edge_end_bundle_star.rs  edge_intersection.rs  geometry_graph.rs  intersection_matrix.rs  label.rs  line_intersector.rs  node.rs  node_map.rs  planar_graph.rs  robust_line_intersector.rs  topology_position.rs
geo/src/algorithm/relate/geomgraph/index/: edge_set_intersector.rs  prepared_geometry.rs  rstar_edge_set_intersector.rs  segment.rs  segment_intersector.rs  simple_edge_set_intersector.rs
geo/src/algorithm/sweep/: cross.rs  im_segment.rs  iter.rs  line_or_point.rs  point.rs  proc.rs  segment.rs  vec_set.rs
geo/src/algorithm/validation/: coord.rs  geometry.rs  geometry_collection.rs  line.rs  line_string.rs  mod.rs  multi_line_string.rs  multi_point.rs  multi_polygon.rs  point.rs  polygon.rs  rect.rs  triangle.rs  utils.rs
