[package]
name = "geo-traits"
version = "0.4.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/georust/geo"
documentation = "https://docs.rs/geo-traits/"
readme = "../README.md"
keywords = ["geo", "3d", "geospatial"]
description = "Geospatial traits"
edition = "2024"

[features]
default = ["geo-types"]

[dependencies]
geo-types = { version = "0.9", optional = true, path = "../geo-types" }

[dev-dependencies]
