[package]
name = "geo-types"
version = "0.8.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/georust/geo"
documentation = "https://docs.rs/geo-types/"
readme = "../README.md"
keywords = ["geo", "3d", "geospatial"]
description = "Geospatial primitive data types"
rust-version = "1.75"
edition = "2021"

[features]
default = ["std"]
std = ["approx?/std", "num-traits/std", "serde?/std"]
multithreading = ["rayon"]
# Prefer `use-rstar` feature rather than enabling rstar directly.
# rstar integration relies on the optional approx crate, but implicit features cannot yet enable other features.
# See: https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#namespaced-features
use-rstar_0_12 = ["rstar_0_12", "approx"]

[dependencies]
rayon = { version = "1.10.0", optional = true }
approx = { version = ">= 0.4.0, < 0.6.0", optional = true, default-features = false }
arbitrary = { version = "1.4.1", optional = true }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
rstar_0_12 = { package = "rstar", version = "0.12", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["alloc", "derive"] }

[dev-dependencies]
approx = ">= 0.4.0, < 0.6.0"
