[package]
name = "geo-3d"
description = "3D geospatial primitives and algorithms"
version = "0.30.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TimTheBig/geo-3d"
documentation = "https://docs.rs/geo-3d/"
readme = "../README.md"
keywords = ["3d", "geo", "geospatial"]
autobenches = true
edition = "2021"
rust-version = "1.75"
categories = ["science::geo"]

[features]
default = ["multithreading"]
use-proj = ["proj"]
proj-network = ["use-proj", "proj/network"]
use-serde = ["serde", "geo-types/serde", "d-delaunay/serde"]
multithreading = ["geo-types/multithreading"]

[dependencies]
earcutr = "0.4.3"
float_next_after = "1.0.0"
geo-types = { version = "0.8.0", path = "../geo-types", features = ["approx", "use-rstar"] }
log = "0.4"
num-traits = "0.2"
proj = { version = "0.28", optional = true }
robust = "1.1.0"
rstar = "0.12.2"
serde = { version = "1.0", optional = true, features = ["derive"] }
quickhull = { version = "0.1.2", git = "https://github.com/TimTheBig/quickhull.git" }
glam = "0.30"
d-delaunay = { version = "0.1.1", git = "https://github.com/TimTheBig/d-delaunay.git" }

[dev-dependencies]
approx = ">= 0.4.0, < 0.6.0"
criterion = { version = "0.5", features = ["html_reports"] }
geo-test-fixtures = { path = "../geo-test-fixtures" }
pretty_env_logger = "0.5"
rand = "0.9"
rand_distr = "0.5"

[[bench]]
name = "area"
harness = false

[[bench]]
name = "coordinate_position"
harness = false

[[bench]]
name = "contains"
harness = false

[[bench]]
name = "convex_hull"
harness = false

[[bench]]
name = "concave_hull"
harness = false

[[bench]]
name = "intersection"
harness = false

[[bench]]
name = "vincenty_distance"
harness = false

[[bench]]
name = "extremes"
harness = false

[[bench]]
name = "euclidean_distance"
harness = false

[[bench]]
name = "prepared_geometry"
harness = false

[[bench]]
name = "rotate"
harness = false

[[bench]]
name = "relate"
harness = false

[[bench]]
name = "simplify"
harness = false

[[bench]]
name = "simplifyvw"
harness = false

[[bench]]
name = "frechet_distance"
harness = false

[[bench]]
name = "rand_line_crossings"
harness = false

[[bench]]
name = "winding_order"
harness = false

[[bench]]
name = "monotone_subdiv"
harness = false

[[bench]]
name = "triangulate"
harness = false

[[bench]]
name = "stitch"
harness = false
